# rocoma-sandbox

./: README.md
docker/: Dockerfile
docs/: _config.yml  index.md  technical-report.md
rocomaex_lua_ctrl/: CMakeLists.txt  package.xml  rocoma_plugin.xml
rocomaex_lua_ctrl/include/rocomaex_lua_ctrl/: LuaController.hpp  RocoState.hpp
rocomaex_lua_ctrl/src/: LuaController.cpp  rocomaex_lua_ctrl_plugin.cpp
scriptctrl_example/: CMakeLists.txt  package.xml  rosconsole.conf
scriptctrl_example/controllers/: LuaGeneric1.lua
scriptctrl_example/include/scriptctrl_example/: ScriptCtrl.hpp  lcm.hpp
scriptctrl_example/launch/: lscript_example.launch
scriptctrl_example/src/: ScriptCtrl.cpp  lcm.cpp  scriptctrl_example_exec.cpp
scripts/: generic-controller.lua
